--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container foter-content">
+        <div class="container footer-content">
             <div class="footer-adress"><a href="/" class="logo-white"><span class="logo-web">Web</span>Studio</a>
                 <address class="footer-adress-nav">
                     <ul class="list">
@@ -283,14 +283,66 @@
                             </svg></a></li>
                 </ul>
             </div>
+
+            <form action="#" class="footer-contact-form">
+                <p class="social-desc-footer">Подпишитесь на рассылку</p>
+                <div class="footer-contact-form-wrapper">
+                    <input type="email" class="footer-contact-input" placeholder="E-mail" name="user-email">
+                    <button type="submit" class="footer-contact-button">Подписаться <svg class="footer-contact-icon"
+                            width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg></button>
+                </div>
+            </form>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
-        <div class="modal"><button type="button" class="button-icon-close" data-modal-close><svg class="icon-close"
-                    width="11px" height="11px">
+        <div class="modal"><button type="button" class="button-icon-close" data-modal-close>
+                <svg class="icon-close" width="18px" height="18px">
                     <use href="./images/icons.svg#icon-close-black"></use>
-                </svg></button>
+                </svg>
+            </button>
+            <p class="backdrop-text">Оставьте свои данные, мы вам перезвоним</p>
+            <form action="#" class="backdrop-contact-form">
+                <label class="backdrop-form-field">
+                    <span class="backdrop-contact-form-desc">Имя</span>
+                    <span class="contact-form-input-icon"><input type="text" class="contact-form-input" name="user_name"
+                            required minlength="2" pattern="^[a-zA-Zа-яА-ЯіІїЇ]+$">
+                        <svg class="contact-form-icon">
+                            <use href="./images/icons.svg#icon-person-black"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label class="backdrop-form-field">
+                    <span class="backdrop-contact-form-desc">Телефон</span>
+                    <span class="contact-form-input-icon"><input type="tel" class="contact-form-input" name="user_phone"
+                            required minlength="10" pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}" title="xxx-xxx-xx-xx">
+                        <svg class="contact-form-icon">
+                            <use href="./images/icons.svg#icon-phone-black"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label class="backdrop-form-field">
+                    <span class="backdrop-contact-form-desc">Почта</span>
+                    <span class="contact-form-input-icon"><input type="email" class="contact-form-input"
+                            name="user_email" required>
+                        <svg class="contact-form-icon">
+                            <use href="./images/icons.svg#icon-email-black"></use>
+                        </svg>
+                    </span>
+                </label>
+                <label class="backdrop-form-field">
+                    <span class="backdrop-contact-form-desc">Комментарий</span>
+                    <textarea name="user_message" class="contact-form-message" placeholder="Введите текст"></textarea>
+                </label>
+                <input id="user_policy" type="checkbox" name="user_policy" required
+                    class="backdrop-form-check visually-hidden">
+                <label for="user_policy" class="backdrop-form-check-desc">Соглашаюсь с рассылкой и принимаю&nbsp;<a
+                        href="#">Условия
+                        договора</a></label>
+                <button type="submit" class="contact-form-button">Отправить</button>
 
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
