--- a/portfolio.html
+++ b/portfolio.html
@@ -204,7 +204,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container foter-content">
+        <div class="container footer-content">
             <div class="footer-adress"><a href="/" class="logo-white"><span class="logo-web">Web</span>Studio</a>
                 <address class="footer-adress-nav">
                     <ul class="list">
@@ -240,6 +240,17 @@
                             </svg></a></li>
                 </ul>
             </div>
+
+            <form action="#" class="footer-contact-form">
+                <p class="social-desc-footer">Подпишитесь на рассылку</p>
+                <div class="footer-contact-form-wrapper">
+                    <input type="email" class="footer-contact-input" placeholder="E-mail" name="user-email">
+                    <button type="submit" class="footer-contact-button">Подписаться <svg class="footer-contact-icon"
+                            width="24" height="24">
+                            <use href="./images/icons.svg#icon-send"></use>
+                        </svg></button>
+                </div>
+            </form>
         </div>
     </footer>
 </body>
